--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,3 +7,31 @@ on:
       - 'main'
 
 env:
+  AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY}}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+
+jobs:
+  build-infra:
+    name: terraform-ci-cd
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+      - name: Terraform Init
+        id: init
+        run: terraform init
+        working-directory: ./vpc_with_module/
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+        working-directory: ./vpc_with_module/
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan
+        working-directory: ./vpc_with_module/
+      - name: Terraform Apply
+        id: apply
+        run: terraform apply --auto-approve
+        working-directory: ./vpc_with_module/
