--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,11 @@ jobs:
         id: plan
         run: terraform plan
         working-directory: ./vpc_with_module/
-      - name: Terraform Apply
-        id: apply
-        run: terraform apply --auto-approve
-        working-directory: ./vpc_with_module/
-      - name: Terraform Destroy
-        id: destroy
-        run: terraform destroy --auto-approve
-        working-directory: ./vpc_with_module/
+      # - name: Terraform Apply
+        # id: apply
+        # run: terraform apply --auto-approve
+        # working-directory: ./vpc_with_module/
+      # - name: Terraform Destroy
+        # id: destroy
+        # run: terraform destroy --auto-approve
+        # working-directory: ./vpc_with_module/
